--- a/aluno-home.html
+++ b/aluno-home.html
@@ -28,13 +28,128 @@
     <!-- Metro UI CSS JavaScript plugins -->
 	<script src="./assets/js/jquery.number.min.js" type="text/javascript"></script>
 	<script src="./assets/js/jquery.themepunch.plugins.min.js" type="text/javascript"></script>
-    <script src="./assets/docs/js/load-metro.js"></script>
+    <script src="./assets/js/metro.min.js"></script>
 	<script src="./assets/js/default.js" type="text/javascript"></script>
 	<script src="./assets/js/plugin_revolution.js" type="text/javascript"></script>
 	<script src="./assets/js/easypaginate.js" type="text/javascript" ></script>
-
 	<!-- Metro UI CSS JavaScript plugins -->
     <script src="./assets/js/load-metro.js"></script>
+
+              <script>
+                    $(function(){
+                        $("#createSysEventsWindow").on('click', function(){
+                            $.Dialog({
+                                shadow: true,
+                                overlay: false,
+                                icon: '',
+                                title: 'Title',
+                                width: 500,
+                                padding: 10,
+                                content: 'Window content here',
+                                draggable: true,
+                                sysButtons: {
+                                    btnMin: true,
+                                    btnMax: true,
+                                    btnClose: true
+                                },
+                                sysBtnCloseClick: function(e){
+                                    alert('Close button click');
+                                },
+                                sysBtnMinClick: function(e){
+                                    alert('Min button click');
+                                },
+                                sysBtnMaxClick: function(e){
+                                    alert('Max button click');
+                                }
+                            });
+                        });
+                        $("#createWindow").on('click', function(){
+                            $.Dialog({
+                                shadow: true,
+                                overlay: false,
+                                icon: '<span class="icon-rocket"></span>',
+                                title: 'Title',
+                                width: 500,
+                                padding: 10,
+                                content: 'Window content here'
+                            });
+                        });
+                        $("#createWindowDraggable").on('click', function(){
+                            $.Dialog({
+                                shadow: true,
+                                overlay: false,
+                                draggable: true,
+                                icon: '<span class="icon-bus"></span>',
+                                title: 'Draggable window',
+                                width: 500,
+                                padding: 10,
+                                content: 'This Window is draggable by caption.',
+                                onShow: function(){
+                                    var content = '<form id="login-form-1">' +
+                                            '<label>Login</label>' +
+                                            '<div class="input-control text"><input type="text" name="login"><button class="btn-clear"></button></div>' +
+                                            '<label>Password</label>'+
+                                            '<div class="input-control password"><input type="password" name="password"><button class="btn-reveal"></button></div>' +
+                                            '<div class="input-control checkbox"><label><input type="checkbox" name="c1" checked/><span class="check"></span>Check me out</label></div>'+
+                                            '<div class="form-actions">' +
+                                            '<button class="button primary">Login to...</button>&nbsp;'+
+                                            '<button class="button" type="button" onclick="$.Dialog.close()">Cancel</button> '+
+                                            '</div>'+
+                                            '</form>';
+
+                                    $.Dialog.title("User login");
+                                    $.Dialog.content(content);
+                                }
+
+                            });
+                        });
+                        $("#createFlatWindow").on('click', function(){
+                            $.Dialog({
+                                overlay: true,
+                                shadow: true,
+                                flat: true,
+                                draggable: true,
+                                icon: '<img src="images/excel2013icon.png">',
+                                title: 'Flat window',
+                                content: '',
+                                padding: 10,
+                                onShow: function(_dialog){
+                                    var content = '<form class="user-input">' +
+                                            '<label>Login</label>' +
+                                            '<div class="input-control text"><input type="text" name="login"><button class="btn-clear"></button></div>' +
+                                            '<label>Password</label>'+
+                                            '<div class="input-control password"><input type="password" name="password"><button class="btn-reveal"></button></div>' +
+                                            '<div class="input-control checkbox"><label><input type="checkbox" name="c1" checked/><span class="check"></span>Check me out</label></div>'+
+                                            '<div class="form-actions">' +
+                                            '<button class="button primary">Login to...</button>&nbsp;'+
+                                            '<button class="button" type="button" onclick="$.Dialog.close()">Cancel</button> '+
+                                            '</div>'+
+                                            '</form>';
+
+                                    $.Dialog.title("User login");
+                                    $.Dialog.content(content);
+                                }
+                            });
+                        });
+                        $("#createWindowYoutube").on('click', function(){
+                            $.Dialog({
+                                overlay: false,
+                                shadow: true,
+                                flat: false,
+                                icon: '<img src="images/excel2013icon.png">',
+                                title: 'Window 8.1 Everywhere For Everything!',
+                                content: '',
+                                onShow: function(_dialog){
+                                    var html = [
+                                        '<iframe width="640" height="480" src="//www.youtube.com/embed/_24bgSxAD9Q" frameborder="0" allowfullscreen></iframe>'
+                                    ].join("");
+
+                                    $.Dialog.content(html);
+                                }
+                            });
+                        });
+                    })
+                </script>
 </head>
 <body class="metro" style="">
     <header id="content-header">
