--- a/entrar.html
+++ b/entrar.html
@@ -24,11 +24,11 @@
     <script src="./assets/docs/js/jquery/jquery.widget.min.js"></script>
     <script src="./assets/docs/js/jquery/jquery.mousewheel.js"></script>
     <script src="./assets/docs/js/prettify/prettify.js"></script>
-    <script src="./assets/docs/js/prettify/prettify.js"></script>
 
     <!-- Metro UI CSS JavaScript plugins -->
 	<script src="./assets/js/jquery.number.min.js" type="text/javascript"></script>
 	<script src="./assets/js/jquery.themepunch.plugins.min.js" type="text/javascript"></script>
+    <script src="./assets/docs/js/load-metro.js"></script>
 	<script src="./assets/js/default.js" type="text/javascript"></script>
 	<script src="./assets/js/plugin_revolution.js" type="text/javascript"></script>
 	<script src="./assets/js/easypaginate.js" type="text/javascript" ></script>
@@ -79,68 +79,74 @@
 			    <ul>
 			     	<li><a href="#"><i class="icon-home"></i></a></li>
 			        <li><a href="#">Home</a></li>
-			        <li class="active"><a href="#">Carrinho de Compras</a></li>
+			        <li class="active"><a href="#">Acesso Restrito</a></li>
 			    </ul>
 			</nav>
-    		<h2 class="titles-big linha-h2">Carrinho de Compras</h2>
-	    		<table class="table">
-					<thead>
-		            <tr>
-		                <th class="text-left">Nome Pproduto</th>
-		                <th class="text-left">Valor</th>
-		                <th class="text-left"></th>
-		            </tr>
-		            </thead>
-
-		            <tbody>
-		            <tr>
-		                <td><a href="" title="" id="" class="createWindow">Língua Portuguesa</a></td>
-						<td class="right">R$ 20,00</td>
-		                <td class="right"><a href="" title="" class="deleta-item">Deletar</a></td>
-		            </tr>
-		            <tr>
-		                <td><a href="" title="" class="">Gestão de Pessoas</a></td>
-		                <td class="right">R$ 20,00</td>
-		                <td class="right"><a href="" title="" class="deleta-item">Deletar</a></td>
-		            </tr>
-		            <tr>
-		                <td><a href="" title="" class="">Administração Geral</a></td>
-						<td class="right">R$ 20,00</td>
-		                <td class="right" style="width: 45px;"><a href="" title="" class="deleta-item">Deletar</a></td>
-		            </tr>
-				</tbody>
-
-				<tfoot></tfoot>
-		    </table>
-
-	    	<div id="vale-cupom"class="metro one-column">
-	    		<div class="span10 left">
-					<p>Se você tem um cupom de desconto, insira-o ao lado:</p>
-				</div>
-				<div class="span4 floatright">
-					<div class="input-control text left">
-					    <input type="text" value="" placeholder=""/>
-					    <button class="btn-clear"></button>
+    		<h2 class="titles-big linha-h2">Acesso Restrito</h2>
+	    	<div class="metro one-column">
+	    		<div class="panel span6 left">
+					<div class="panel-header bg-lightBlue fg-white">
+	                	Entrar
 					</div>
-					<div class="floatright">
-						<input type="submit" value="Validar Cupom">
-					</div>
-				</div>
-	    	</div>
+					<div class="panel-content">
+		        		<form action="" method="get" accept-charset="utf-8">
 
-	    	<div class="metro one-column box-total">
-	    		<div class="span4 left">
-					<a href="" title="Continuar Comprando" class="continuar-comprando">Continuar Comprando</a>
+		                    <div class="panel-content">
+		                    <p class="">Efetue seu login para ter acesso.</p>
+		                    <label>E-mail</label>
+			        		<div class="input-control text">
+							    <input type="text" value="" placeholder=""/>
+							    <button class="btn-clear"></button>
+							</div>
+							<label>Senha</label>
+							<div class="input-control password">
+							    <input type="password" value="" placeholder=""/>
+							    <button class="btn-reveal"></button>
+							</div>
+							<div class="links-login left">
+								<a href="#" title="Esqueceu senha?" class="" style="display:block;">Esqueceu sua senha?</a>
+							</div>
+							<div class="floatright">
+								<input type="submit" value="Entrar">
+							</div>
+		        		</form>
+		        	</div>
+				</div><!-- end Panel -->
+			</div>
+		    <div class="span2 left" style="text-align:center;">
+	        	<h3>--- OU ---</h3>
+	        </div>
+			<div class="panel span6 floatright">
+				<div class="panel-header bg-lightBlue fg-white">
+	               	Cadastre-se
 				</div>
-				<div id="total-carrinho" class="span4">
-					<span class="label-total">Total</span>
-					<span class="label-valor">R$ 154,00</span>
-				</div>
-	    	</div>
-			<a href="" title="Finalizar Compra" class="finalizar-compra margin-top">Finalizar Compra</a>
-	    	<div class="metro one-column margin-top">
-	    		<img src='https://p.simg.uol.com.br/out/pagseguro/i/banners/divulgacao/728x90_10X_pagseguro.gif' alt='' />
-	    	</div>
+				<div class="panel-content">
+		       		<form action="" method="get" accept-charset="utf-8">
+		                    <div class="panel-content">
+	                    <p class="">Cadastre-se agora mesmo para ter acesso.</p>
+	                    <label>E-mail</label>
+		        		<div class="input-control text">
+						    <input type="text" value="" placeholder=""/>
+						    <button class="btn-clear"></button>
+						</div>
+						<label>Senha</label>
+						<div class="input-control password">
+						    <input type="password" value="" placeholder=""/>
+						    <button class="btn-reveal"></button>
+						</div>
+						<label>Confirme sua Senha</label>
+						<div class="input-control password">
+						    <input type="password" value="" placeholder=""/>
+						    <button class="btn-reveal"></button>
+						</div>
+						<div class="floatright">
+							<input type="submit" value="Cadastrar">
+						</div>
+	        		</form>
+	        	</div>
+			</div><!-- end Panel -->
+		</div>
+		</div>
     	</div><!-- end noticias -->
 	</div><!-- end container -->
 	<footer id="footer" class="clear">
