Ajuste home, Detalhe pedido, mensagens, ultimas aulas

--- a/aluno-home.html
+++ b/aluno-home.html
@@ -281,20 +281,20 @@
 	                            <td><a href="" title="" id="" class="createWindow">Língua Portuguesa</a></td>
 	                            <td class="right">HENRIQUE CASTELO BRANCO</td>
 	                            <td class="right">15:32</td>
-                            	<td class="right"><a href="" title=""><img src="./assets/imgs/delete.png" alt=""></a></td>
+                            	<td class="text-right"><a href="" title=""><img src="./assets/imgs/delete.png" alt=""></a></td>
 	                        </tr>
 	                        <tr>
 	                            <td><a href="" title="">Gestão de Pessoas</a></td>
 	                            <td class="right">HENRIQUE CASTELO BRANCO</td>
 	                            <td class="right">15:32</td>
-                            	<td class="right"><a href="" title=""><img src="./assets/imgs/delete.png" alt=""></a></td>
+                            	<td class="text-right"><a href="" title=""><img src="./assets/imgs/delete.png" alt=""></a></td>
 
 	                        </tr>
 	                        <tr>
 	                            <td><a href="" title="">Administração Geral</a></td>
 	                            <td class="right">HENRIQUE CASTELO BRANCO</td>
 	                            <td class="right">15:32</td>
-                            	<td class="right"><a href="" title=""><img src="./assets/imgs/delete.png" alt=""></a></td>
+                            	<td class="text-right"><a href="" title=""><img src="./assets/imgs/delete.png" alt=""></a></td>
 	                        </tr>
 	                        </tbody>
 
