Tabulação de dados

--- a/detalhe-pedido.html
+++ b/detalhe-pedido.html
@@ -92,21 +92,62 @@
                       PEDIDO Nº. 0007272
                     </div>
                     <div class="panel-content">
+						<div class="span5">
+							<table class="table">
+								<tbody>
+						            <tr>
+						            	<td class="text-left">STATUS:</td>
+						                <td class="text-left"><b> PAGO</b></td>
+						            </tr>
+						            <tr>
+						            	<td class="text-left">NOME:</td>
+						                <td class="text-left"><b> GUSTAVO SANTOS ARRUDA</b></td>
+						            </tr>
+						            <tr>
+						            	<td class="text-left">DATA HPRA DO PEDIDO:</td>
+						                <td class="text-left"><b> 19/04/2014 16:09:09</b></td>
+						            </tr>
+						            <tr>
+						            	<td class="text-left">CPF:</td>
+						                <td class="text-left"><b> 018.466.011-42</b></td>
+						            </tr>
+						            <tr>
+						            	<td class="text-left">E-MAIL:</td>
+						                <td class="text-left"><b> gustavosantosdev@gmail.com</b></td>
+						            </tr>
+						            <tr>
+						            	<td class="text-left">CEP:</td>
+						                <td class="text-left"><b> 78058-100</b></td>
+						            </tr>
+						            <tr>
+						            	<td class="text-left">LOGRADOURO:</td>
+						                <td class="text-left"><b> R. 64, Q. 92</b></td>
+						            </tr>
+						            <tr>
+						            	<td class="text-left">NÚMERO:</td>
+						                <td class="text-left"><b> 20</b></td>
+						            </tr>
+						            <tr>
+						            	<td class="text-left">BAIRRO:</td>
+						                <td class="text-left"><b> CPA 4</b></td>
+						            </tr>
+						            <tr>
+						            	<td class="text-left">UF:</td>
+						                <td class="text-left"><b> MATO GROSSO</b></td>
+						            </tr>
+						            <tr>
+						            	<td class="text-left">CIDADE:</td>
+						                <td class="text-left"><b> CUIABÁ</b></td>
+						            </tr>
+						            <tr>
+						            	<td class="text-left">VALE DESCONTO:</td>
+						                <td class="text-left"><b> SIM</b></td>
+						            </tr>
 
-                    	<div class="span10">
-                    		<p>STATUS:<b> PAGO</b></p>
-                    		<p>DATA / HORA DO PEDIDO: <b>19/04/2014</b></p>
-                    		<p>NOME: <b>GUSTAVO SANTOS ARRUDA</b></p>
-                    		<p>CPF: <b>018.466.011-42</b></p>
-                    		<p>E-MAIL: <b>gustavosantosdev@gmail.com</b></p>
-                    		<p>ENDEREÇO</p>
-                    		<p>CEP: <b>78058-100</b></p>
-                    		<p>LOGRADOURO: <b>R.64, Q.92</b></p>
-                    		<p>NÚMERO: <b>20</b></p>
-                    		<p>BAIRRO: <b>CPA 4</b></p>
-                    		<p>UF: <b>MATO GROSSO</b></p>
-                    		<p>CIDADE: <b>CUIABÁ</b></p>
-                    	</div>
+								</tbody>
+								<tfoot></tfoot>
+					    	</table>
+				    	</div>
 
                     <div class="panel-header bg-lightBlue fg-white">
                       DETALHES DO PEDIDO
