--- a/index.html
+++ b/index.html
@@ -298,22 +298,10 @@
 
 			</div><!-- end professores -->
 
-    		<div class="metro four-column clear">
+    		<div class="four-column clear" style="overflow:auto;">
     			<h2 class="titles-big title-cursos">Cursos</h2>
-    			
-    			<article class="cursos-item">
-    				<figure>
-    					<img src="assets/imgs/figure.png" alt="">
-    					<figcaption></figcaption>
-    				</figure>
-    				<div class="title-curso-item"><h5>Concurso - Polícia Rodoviária Federal Ag. Adm</h5></div>
-    				<div class="footer-curso">
-    					<span>R$ 1.200,00</span>
-    					<a href="#" class="saiba-mais-curso" title="Saiba mais">saiba mais</a>
-    				</div>
-    			</article>
 
-    			<article class="cursos-item">
+    			<div class="cursos-item">
     				<figure>
     					<img src="assets/imgs/figure.png" alt="">
     					<figcaption></figcaption>
@@ -323,9 +311,9 @@
     					<span>R$ 1.200,00</span>
     					<a href="#" class="saiba-mais-curso" title="Saiba mais">saiba mais</a>
     				</div>
-    			</article>
+    			</div>
 
-    			<article class="cursos-item">
+    			<div class="cursos-item">
     				<figure>
     					<img src="assets/imgs/figure.png" alt="">
     					<figcaption></figcaption>
@@ -335,9 +323,9 @@
     					<span>R$ 1.200,00</span>
     					<a href="#" class="saiba-mais-curso" title="Saiba mais">saiba mais</a>
     				</div>
-    			</article>
+    			</div>
 
-    			<article class="cursos-item">
+    			<div class="cursos-item">
     				<figure>
     					<img src="assets/imgs/figure.png" alt="">
     					<figcaption></figcaption>
@@ -347,12 +335,27 @@
     					<span>R$ 1.200,00</span>
     					<a href="#" class="saiba-mais-curso" title="Saiba mais">saiba mais</a>
     				</div>
-    			</article>
+    			</div>
+
+    			<div class="cursos-item">
+    				<figure>
+    					<img src="assets/imgs/figure.png" alt="">
+    					<figcaption></figcaption>
+    				</figure>
+    				<div class="title-curso-item"><h5>Concurso - Polícia Rodoviária Federal Ag. Adm</h5></div>
+    				<div class="footer-curso">
+    					<span>R$ 1.200,00</span>
+    					<a href="#" class="saiba-mais-curso" title="Saiba mais">saiba mais</a>
+    				</div>
+    			</div>
+				<div class="one-column clear link-padrao" style="overflow:auto;">
+    				<a href="teste" title="Ver Todos" class="">Ver Todos</a>
+    			</div>
 			</div><!-- end cursos -->
 
-			<hr class="line"></hr>
 
-    		<div class="metro one-column clear">
+
+    		<div class="one-column clear" style="overflow:auto;">
     			<h2 class="titles-big title-aulas-gratuitas">Aulas gratuitas</h2>
 
     			<article class="aulas-item">
@@ -386,14 +389,18 @@
     					<a href="#" class="assistir" title="Assistir à aula">Assistir à aula</a>
     				</div>
     			</article>
-
+				<div class="one-column clear link-padrao" style="overflow:auto;">
+    				<a href="teste" title="Ver Todos" class="">Ver Todos</a>
+    			</div>
 			</div><!-- end Aulas -->
+
+			<hr class="line"></hr>
 
 			<div class="metro one-column clear last-box">
 
 				<section id="noticias" class="box3">
 					<h2 class="titles-big title-noticias">Notícias</h2>
-					<article>
+					<article class="noticias-item">
 						<a href="#" title="ADVOGADO LANÇA LIVRO DE 7,5 METROS">
 							<div class="side-left-article">
 								<span class="dia clear">06</span>
@@ -401,13 +408,12 @@
 							</div>
 							<div class="side-right-article">
 								<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-								<p>Em protesto advogado lança livro gigante. Ele dedicou 23 anos na obra. </p>
+								<p>Em protesto advogado lança livro gigante. Ele dedicou 23 anos na obra. </p>
 							</div>
 						</a>
 					</article>
 
-
-					<article>
+					<article class="noticias-item">
 						<a href="#" title="ADVOGADO LANÇA LIVRO DE 7,5 METROS">
 							<div class="side-left-article">
 								<span class="dia clear">06</span>
@@ -415,12 +421,14 @@
 							</div>
 							<div class="side-right-article">
 								<h4>ADVOGADO LANÇA LIVRO DE 7,5 METROS</h4>
-								<p>Em protesto advogado lança livro gigante. Ele dedicou 23 anos na obra. </p>
+								<p>Em protesto advogado lança livro gigante. Ele dedicou 23 anos na obra. </p>
 							</div>
 						</a>
 					</article>
-
-
+					
+					<div class="" id="">
+						<a href="teste" title="Ver Todos" id="ver-noticias">Ver Todas</a>
+					</div>
 				</section><!-- end noticias -->
 
 				<section id="noticias" class="box3">
@@ -428,9 +436,9 @@
 
 					<div id="depoimentos">
 						<div class="content-depoimentos">
-							<p>"É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de “Conteúdo aqui, conteúdo aqui...”.</p>
+							<p>"É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de “Conteúdo aqui, conteúdo aqui...”.</p>
 
-							<h5 class="autor">Gustavo Santos Arruda, Analista de Sistemas - Ábaco Tecnologia de Informação</h5>
+							<h5 class="autor">Gustavo Santos Arruda, Analista de Sistemas - Ábaco Tecnologia de Informação</h5>
 						</div>
 					</div>
 
@@ -438,7 +446,7 @@
 
 				<section id="noticias" class="box3">
 					<h2 class="titles-big title-tv">TV</h2>
-					<iframe width="347" height="248" src="//www.youtube.com/embed/kGgTuEcuOoI?rel=0" frameborder="0" allowfullscreen></iframe>
+					<!-- iframe width="347" height="248" src="//www.youtube.com/embed/kGgTuEcuOoI?rel=0" frame="0" allowfullscreen></iframe -->
 				</section><!-- end noticias -->
 			</div>
 		</div>
