--- a/cursos-ver.html
+++ b/cursos-ver.html
@@ -90,7 +90,17 @@
 
     <div class="container" style="padding: 10px">
     	<div class="metro one-column">
-            <div class="panel" style="overflow: auto;">
+            <nav class="breadcrumbs mini">
+                <ul>
+                    <li><a href="#"><i class="icon-home"></i></a></li>
+                    <li><a href="#">Home</a></li>
+                    <li class="active"><a href="#">Carrinho de Compras</a></li>
+                </ul>
+            </nav>
+            <div class="metro one-column">
+                <a href="" title="Adicionar no carrinho" class="adicionar-carrinho">Adicionar no carrinho</a>
+            </div>
+            <div class="panel margin-top" style="overflow: auto;">
                 <div class="panel-header bg-lightBlue fg-white">
                      <h3 style="color:#fff;">Polícia Rodoviária Federal</h3>
                 </div>
