--- a/carrinho.html
+++ b/carrinho.html
@@ -95,18 +95,18 @@
 		            <tbody>
 		            <tr>
 		                <td><a href="" title="" id="" class="createWindow">Língua Portuguesa</a></td>
-						<td class="right">R$ 20,00</td>
-		                <td class="right"><a href="" title="" class="deleta-item">Deletar</a></td>
+						<td class="left">R$ 20,00</td>
+		                <td class="text-left"><a href="" title="" class="deleta-item">Deletar</a></td>
 		            </tr>
 		            <tr>
 		                <td><a href="" title="" class="">Gestão de Pessoas</a></td>
-		                <td class="right">R$ 20,00</td>
-		                <td class="right"><a href="" title="" class="deleta-item">Deletar</a></td>
+		                <td class="left">R$ 20,00</td>
+		                <td class="text-left"><a href="" title="" class="deleta-item">Deletar</a></td>
 		            </tr>
 		            <tr>
 		                <td><a href="" title="" class="">Administração Geral</a></td>
-						<td class="right">R$ 20,00</td>
-		                <td class="right" style="width: 45px;"><a href="" title="" class="deleta-item">Deletar</a></td>
+						<td class="left">R$ 20,00</td>
+		                <td class="text-left" style="width: 45px;"><a href="" title="" class="deleta-item">Deletar</a></td>
 		            </tr>
 				</tbody>
 
