--- a/finalizar-pedido.html
+++ b/finalizar-pedido.html
@@ -140,14 +140,15 @@
 					    <input type="text" value="" placeholder=""/>
 					    <button class="btn-clear"></button>
 					</div>
+			    	<div class="metro one-column span4 left">
+						<a href="" title="Continuar Comprando" class="continuar-comprando left">Continuar Comprando</a>
+						<!--a href="" title="Finalizar Compra" class="finalizar-compra">Finalizar Compra</a -->
+			    	</div>
 					<input type="submit" value="Finalizar compra" class="right botao-finalizar-compra">
 				</form>
 			</div>
 
-	    	<div class="metro one-column box-total">
-				<a href="" title="Continuar Comprando" class="continuar-comprando left">Continuar Comprando</a>
-				<!--a href="" title="Finalizar Compra" class="finalizar-compra">Finalizar Compra</a -->
-	    	</div>
+
 	    	<div class="metro one-column margin-top">
 	    		<img src='https://p.simg.uol.com.br/out/pagseguro/i/banners/divulgacao/728x90_10X_pagseguro.gif' alt='' />
 	    	</div>
