Ajuste Curso-ver

--- a/cursos-ver.html
+++ b/cursos-ver.html
@@ -100,16 +100,13 @@
             <div class="metro one-column">
                 <a href="" title="Adicionar no carrinho" class="adicionar-carrinho">Adicionar no carrinho</a>
             </div>
-            <div class="panel margin-top" style="overflow: auto;">
-                <div class="panel-header bg-lightBlue fg-white">
-                     <h3 style="color:#fff;">Polícia Rodoviária Federal</h3>
-                </div>
+            <h2 class="titles-big linha-h2">Policia Rodoviária Federal</h2>
+                <p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível. Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor.</p>
+            <div class="panel margin-top" style="overflow: auto;">            
                 <div class="panel-content">
-                    <p>É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível. Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor.</p>
 
-
-                    <div class="span6 left" style="margin-top: 55px;">
-                        <div class="panel-header bg-lightOlive  fg-white">
+                    <div class="span6 left" style="">
+                        <div class="panel-header bg-transparent">
                            Objetivo
                         </div>
                         <div class="panel-content">
@@ -117,8 +114,8 @@
                         </div>
                     </div>
 
-                    <div class="span7 left" style="margin-top: 55px;">
-                        <div class="panel-header bg-lightRed  fg-white">
+                    <div class="span7 left" style="">
+                        <div class="panel-header bg-transparent">
                            Conteúdo
                         </div>
                         <div class="panel-content">
@@ -130,7 +127,7 @@
                 </div>
             </div><!-- end descricao produto -->
             <div class="panel" style="margin-top: 25px;">
-                <div class="panel-header bg-darkViolet fg-white" style="">
+                <div class="panel-header bg-transparent">
                    Compre individualmente
                 </div>
                 <div class="panel-content">
