--- a/cursos-ver.html
+++ b/cursos-ver.html
@@ -26,30 +26,15 @@
     <script src="./assets/docs/js/prettify/prettify.js"></script>
 
     <!-- Metro UI CSS JavaScript plugins -->
-	<script src="./assets/js/jquery.number.min.js" type="text/javascript"></script>
-	<script src="./assets/js/jquery.themepunch.plugins.min.js" type="text/javascript"></script>
-    <script src="./assets/docs/js/load-metro.js"></script>
+    <!-- Metro UI CSS JavaScript plugins -->
+    <script src="./js/metro.min.js"></script>
+    <script src="./assets/js/load-metro.js"></script>
+    <script src="./assets/js/jquery.number.min.js" type="text/javascript"></script>
+    <script src="./assets/js/jquery.themepunch.plugins.min.js" type="text/javascript"></script>
 	<script src="./assets/js/default.js" type="text/javascript"></script>
 	<script src="./assets/js/plugin_revolution.js" type="text/javascript"></script>
 	<script src="./assets/js/easypaginate.js" type="text/javascript" ></script>
 
-	<!-- Metro UI CSS JavaScript plugins -->
-    <script src="./assets/js/load-metro.js"></script>
-
-    <script type="text/javascript">
-    $(".createWindow").on('click', function(){
-        $.Dialog({
-            shadow: true,
-            overlay: false,
-            icon: '&lt;span class="icon-rocket"&gt;&lt;/span&gt;',
-            title: 'Title',
-            width: 500,
-            padding: 10,
-            content: 'Window content here'
-        });
-    });
-
-    </script>
 </head>
 <body class="metro" style="">
     <header id="content-header">
@@ -114,7 +99,7 @@
                         </div>
                     </div>
 
-                    <div class="span7 left" style="">
+                    <div class="span7 floatright" style="">
                         <div class="panel-header bg-transparent">
                            Conteúdo
                         </div>
@@ -130,10 +115,29 @@
                 <div class="panel-header bg-transparent">
                    Compre individualmente
                 </div>
+
+                <script>
+                    $(function(){
+
+                        $(".createWindow").on('click', function(){
+                            $.Dialog({
+                                shadow: true,
+                                overlay: false,
+                                icon: '<span class="icon-rocket"></span>',
+                                title: 'Title',
+                                width: 500,
+                                padding: 10,
+                                content: 'Window content here'
+                            });
+                        });
+
+                    })
+                </script>
                 <div class="panel-content">
                     <table class="table hovered">
                         <thead>
                         <tr>
+                            <th class="text-left">Informações</th>
                             <th class="text-left">Disciplina</th>
                             <th class="text-left">Professor</th>
                             <th class="text-left">Duração</th>
@@ -144,42 +148,48 @@
 
                         <tbody>
                         <tr>
-                            <td><a href="" title="" id="" class="createWindow">Língua Portuguesa</a></td>
+                            <td><button class="button createWindow" id="botao-window"><img src="./assets/imgs/ver-info.png" alt=""></button></td>
+                            <td class="right">Língua Portuguesa</td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
                             <td class="right">34h</td>
                             <td class="right">R$ 70,00</td>
                             <td class="right"><a href="" title=""><img src="./assets/imgs/carrinho-item.png" alt=""></a></td>
                         </tr>
                         <tr>
-                            <td><a href="" title="">Gestão de Pessoas</a></td>
+                            <td><button class="button createWindow" id="botao-window"><img src="./assets/imgs/ver-info.png" alt=""></button></td>
+                            <td class="right">Língua Portuguesa</td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
                             <td class="right">34h</td>
                             <td class="right">R$ 70,00</td>
                             <td class="right"><a href="" title=""><img src="./assets/imgs/carrinho-item.png" alt=""></a></td>
                         </tr>
                         <tr>
-                            <td><a href="" title="">Administração Geral</a></td>
+                            <td><button class="button createWindow" id="botao-window"><img src="./assets/imgs/ver-info.png" alt=""></button></td>
+                            <td class="right">Língua Portuguesa</td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
                             <td class="right">34h</td>
                             <td class="right">R$ 70,00</td>
                             <td class="right"><a href="" title=""><img src="./assets/imgs/carrinho-item.png" alt=""></a></td>
                         </tr>
                         <tr>
-                            <td><a href="" title="">Direito Administrativo</a></td>
+                            <td><button class="button createWindow" id="botao-window"><img src="./assets/imgs/ver-info.png" alt=""></button></td>
+                            <td class="right">Língua Portuguesa</td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
                             <td class="right">34h</td>
                             <td class="right">R$ 70,00</td>
                             <td class="right"><a href="" title=""><img src="./assets/imgs/carrinho-item.png" alt=""></a></td>
                         </tr>
                         <tr>
-                            <td><a href="" title="">Informática</a></td>
+                            <td><button class="button createWindow" id="botao-window"><img src="./assets/imgs/ver-info.png" alt=""></button></td>
+                            <td class="right">Verrmática</td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
                             <td class="right">34h</td>
                             <td class="right">R$ 70,00</td>
                             <td class="right"><a href="" title=""><img src="./assets/imgs/carrinho-item.png" alt=""></a></td>
                         </tr>
                         <tr>
-                            <td><a href="" title="">Administração Pública</a></td>
+                            <td><button class="button createWindow" id="botao-window"><img src="./assets/imgs/ver-info.png" alt=""></button></td>
+                            <td class="right">Língua Portuguesa</td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
                             <td class="right">34h</td>
                             <td class="right">R$ 70,00</td>
@@ -208,8 +218,8 @@
 					<li><a href="" title="" class="youtube">youtube</a></li>
 				</ul>
 			</div><!-- end redes-sociais -->
-			<div id="informacoes" class="box-footer span3 left">
-				<span><h3>Informações</h3></span>
+			<div id="Verrmacoes" class="box-footer span3 left">
+				<span><h3>Verrmações</h3></span>
 				<ul class="lista-footer">
 					<li><a href="" title="">Quem somos</a></li>
 					<li><a href="" title="">Como unciona?</a></li>
@@ -237,7 +247,7 @@
 			</div>
 			<div id="newsletter" class="box-footer span3 left">
 				<span><h3>Newsletter</h3></span>
-				<p>Receba nossas informações:</p>
+				<p>Receba nossas Verrmações:</p>
 				<form action="" method="get" accept-charset="utf-8">
 	        		<div class="">
 					    <input type="text" value="" placeholder="e-mail"/>
