--- a/cursos-ver.html
+++ b/cursos-ver.html
@@ -149,7 +149,6 @@
                     <table class="table hovered">
                         <thead>
                         <tr>
-                            <th class="text-left">Informações</th>
                             <th class="text-left">Disciplina</th>
                             <th class="text-left">Professor</th>
                             <th class="text-left">Duração</th>
@@ -160,7 +159,6 @@
 
                         <tbody>
                         <tr>
-                            <td><button class="button createWindow" id="botao-window"><img src="./assets/imgs/ver-info.png" alt=""></button></td>
                             <td class="right"><a href="#" class="item">Língua Portuguesa</a></td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
                             <td class="right">34h</td>
@@ -168,31 +166,31 @@
                             <td class="right"><a href="" title=""><img src="./assets/imgs/carrinho-item.png" alt=""></a></td>
                         </tr>
                         <tr>
-                            <td><button class="button createWindow" id="botao-window"><img src="./assets/imgs/ver-info.png" alt=""></button></td>
-                            <td class="right">Língua Portuguesa</td>
+
+                            <td class="right"><a href="#" class="item">Língua Portuguesa</a></td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
                             <td class="right">34h</td>
                             <td class="right">R$ 70,00</td>
                             <td class="right"><a href="" title=""><img src="./assets/imgs/carrinho-item.png" alt=""></a></td>
                         </tr>
                         <tr>
-                            <td><button class="button createWindow" id="botao-window"><img src="./assets/imgs/ver-info.png" alt=""></button></td>
-                            <td class="right">Língua Portuguesa</td>
+
+                            <td class="right"><a href="#" class="item">Língua Portuguesa</a></td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
                             <td class="right">34h</td>
                             <td class="right">R$ 70,00</td>
                             <td class="right"><a href="" title=""><img src="./assets/imgs/carrinho-item.png" alt=""></a></td>
                         </tr>
                         <tr>
-                            <td><button class="button createWindow" id="botao-window"><img src="./assets/imgs/ver-info.png" alt=""></button></td>
-                            <td class="right">Língua Portuguesa</td>
+
+                            <td class="right"><a href="#" class="item">Língua Portuguesa</a></td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
                             <td class="right">34h</td>
                             <td class="right">R$ 70,00</td>
                             <td class="right"><a href="" title=""><img src="./assets/imgs/carrinho-item.png" alt=""></a></td>
                         </tr>
                         <tr>
-                            <td><button class="button createWindow" id="botao-window"><img src="./assets/imgs/ver-info.png" alt=""></button></td>
+
                             <td class="right">Verrmática</td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
                             <td class="right">34h</td>
@@ -200,8 +198,8 @@
                             <td class="right"><a href="" title=""><img src="./assets/imgs/carrinho-item.png" alt=""></a></td>
                         </tr>
                         <tr>
-                            <td><button class="button createWindow" id="botao-window"><img src="./assets/imgs/ver-info.png" alt=""></button></td>
-                            <td class="right">Língua Portuguesa</td>
+
+                            <td class="right"><a href="#" class="item">Língua Portuguesa</a></td>
                             <td class="right">HENRIQUE CASTELO BRANCO</td>
                             <td class="right">34h</td>
                             <td class="right">R$ 70,00</td>
