--- a/home.html
+++ b/home.html
@@ -38,7 +38,48 @@
     <header id="content-header-home" class="">       
     	<div id="header-container" class="container">
     		<a href="" id="logo"><img src="./assets/imgs/logo-romper.png" alt=""></a>
-    		<div id="aside-header-right">
+    		<section id="shopp-cart">
+    			<a href="javascript:void(0);" title="" id="carrinho-label">
+					<span id="icon-carrinho"></span>
+					<span id="texto-carrinho">Ítens no carrinho: </span>
+					<span id="itens-carrinho">10</span>
+					<span id="arrow-down"></span>
+    			</a>
+    			<div id="itens-do-carrinho">
+	   				<ul id="" class="">
+						<li><a href="#" title="">Língua Portuguesa - Gramática</a></li>
+						<li><a href="#" title="">História - História de Mato Grosso</a></li>
+						<li><a href="#" title="">Língua Portuguesa - Gramática</a></li>
+						<li><a href="#" title="">Matemática - Álgebra</a></li>
+						<li><a href="#" title="">Curso - Informática Básica</a></li>
+						<li><a href="#" title="">Curso - Polícia Rodoviária Federal e Agente Federal</a></li>
+					</ul>
+					<a href="javascript:void(0);" title="" id="ir-para-carrinho">Ir para o carrinho</a>
+				</div>
+    		</section>
+    		<section id="login-aluno">
+    			<a href="javascript:void(0);" id="button-area-aluno">área do aluno</a>
+	    		<div id="form-aluno">
+	    		<h4 class="titulo-login-area">Login</h4>
+	    			<form action="" method="get" accept-charset="utf-8">
+		        		<div class="input-control text">
+						    <input type="text" value="" placeholder="E-mail"/>
+						    <button class="btn-clear"></button>
+						</div>
+						<div class="input-control password">
+						    <input type="password" value="" placeholder="Senha"/>
+						    <button class="btn-reveal"></button>
+						</div>
+						<div class="links-login">
+							<a href="#" title="Crie uma conta" class="crie-conta">Crie uma conta</a>
+							<a href="#" title="Esqueceu senha?" class="esqueceu-senha">Esqueceu sua senha?</a>
+						</div>
+						
+						<input type="submit" value="Entrar" class="right">
+	        		</form>
+				</div>
+    		</section>
+    		<div id="aside-header-right" class="">
 				<div id="search" class="input-control text">
 				    <input type="text" placeholder="Busca" />
 				    <button class="btn-search"></button>
