Ajuste, carrinho e login

--- a/home.html
+++ b/home.html
@@ -43,7 +43,6 @@
 					<span id="icon-carrinho"></span>
 					<span id="texto-carrinho">Ítens no carrinho: </span>
 					<span id="itens-carrinho">10</span>
-					<span id="arrow-down"></span>
     			</a>
     			<div id="itens-do-carrinho">
 	   				<ul id="" class="">
@@ -58,8 +57,11 @@
 				</div>
     		</section>
     		<section id="login-aluno">
-    			<a href="javascript:void(0);" id="button-area-aluno">área do aluno</a>
-	    		<div id="form-aluno">
+    			<a href="javascript:void(0);" id="button-area-aluno" class="login-button">área do aluno</a>
+    			<script type="text/javascript">
+				
+    			</script>
+	    		<!--div id="form-aluno">
 	    		<h4 class="titulo-login-area">Login</h4>
 	    			<form action="" method="get" accept-charset="utf-8">
 		        		<div class="input-control text">
@@ -77,7 +79,7 @@
 						
 						<input type="submit" value="Entrar" class="right">
 	        		</form>
-				</div>
+				</div -->
     		</section>
     		<div id="aside-header-right" class="">
 				<div id="search" class="input-control text">
