--- a/home.html
+++ b/home.html
@@ -32,6 +32,7 @@
 	<script src="./assets/js/default.js" type="text/javascript"></script>
 	<script src="./assets/js/plugin_revolution.js" type="text/javascript"></script>
 	<script src="./assets/js/easypaginate.js" type="text/javascript" ></script>
+	<script src="./assets/js/tweecool.js" type="text/javascript" ></script>
 
 </head>
 <body class="metro">
@@ -58,9 +59,6 @@
     		</section>
     		<section id="login-aluno">
     			<a href="javascript:void(0);" id="button-area-aluno" class="login-button">área do aluno</a>
-    			<script type="text/javascript">
-				
-    			</script>
 	    		<!--div id="form-aluno">
 	    		<h4 class="titulo-login-area">Login</h4>
 	    			<form action="" method="get" accept-charset="utf-8">
@@ -364,10 +362,11 @@
 			</section>
 			<section id="concursos" class="span5">
 				<h2 class="titulo-padrao" title="Rompendo no Twitter">Rompendo no Twitter</h2>
+				<div class="twitter-widget">
+					<div id="tweecool"></div>
+				</div>
 
-
-
-				<a href="teste" title="Seguir" id="ver-noticias">Seguir</a>
+				<a href="http://twitter.com/@gsarruda" target="_blank" title="Seguir" id="ver-noticias">Seguir</a>
 			</section>
 		</aside>
 		<aside id="aside-right" class="" style="overflow:auto">
